# prot_task

first/: CMakeLists.txt  main.cpp  thread_obj.cpp  thread_obj.hpp
second/: CMakeLists.txt  main.cpp  server_obj.cpp  server_obj.hpp
